--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background: #c1bdba;
+  background: #333;
   font-family: 'Titillium Web', sans-serif;
 }
 
@@ -22,7 +22,7 @@ a:hover {
 }
 
 .form {
-  background: rgba(19, 35, 47, 0.9);
+  background: #eee;
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
@@ -56,11 +56,11 @@ a:hover {
 }
 .tab-group li a:hover {
   background: #179b77;
-  color: #ffffff;
+  color: #666;
 }
 .tab-group .active a {
   background: #1ab188;
-  color: #ffffff;
+  color: #666;
 }
 
 .tab-content > div:last-child {
@@ -69,7 +69,7 @@ a:hover {
 
 h1 {
   text-align: center;
-  color: #ffffff;
+  color: #333;
   font-weight: 300;
   margin: 0 0 40px;
 }
@@ -79,7 +79,7 @@ label {
   -webkit-transform: translateY(6px);
           transform: translateY(6px);
   left: 13px;
-  color: rgba(255, 255, 255, 0.5);
+  color: #666;
   -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
   -webkit-backface-visibility: hidden;
@@ -88,7 +88,7 @@ label {
 }
 label .req {
   margin: 2px;
-  color: #1ab188;
+  color: #666;
 }
 
 label.active {
@@ -102,7 +102,7 @@ label.active .req {
 }
 
 label.highlight {
-  color: #ffffff;
+  color: #666;
 }
 
 input, textarea {
@@ -114,14 +114,14 @@ input, textarea {
   background: none;
   background-image: none;
   border: 1px solid #a0b3b0;
-  color: #ffffff;
+  color: #333;
   border-radius: 0;
   -webkit-transition: border-color .25s ease, box-shadow .25s ease;
   transition: border-color .25s ease, box-shadow .25s ease;
 }
 input:focus, textarea:focus {
   outline: 0;
-  border-color: #1ab188;
+  border-color: #60a5da;
 }
 
 textarea {
@@ -157,14 +157,14 @@ textarea {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .1em;
-  background: #1ab188;
+  background: #60a5da;
   color: #ffffff;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   -webkit-appearance: none;
 }
 .button:hover, .button:focus {
-  background: #179b77;
+  background: #2a77b2;
 }
 
 .button-block {
