--- a/css/style1.css
+++ b/css/style1.css
@@ -6,8 +6,21 @@ body {
 }
 
 a {
-	color: #2A679F;
+	color: #000000;
 }
+#header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 120px;
+    background: #60a5da;
+}
+#searchForms{
+	float:left;
+	margin-top:5px;
+	padding-top:5px;
+}
+
 /*========*/
 
 .form-wrapper {
@@ -112,12 +125,14 @@ a.login{
 	float:right;
 	font-size: 14px;
 	margin-right:2em;
+	margin-top: 1em;
 }
 .alogin{
 	position:relative;
 	float:right;
 	font-size: 14px;
 	margin-right:2em;
+	margin-top:1em;
 }
 .form-wrapper #submit::-moz-focus-inner {
 	border: 0;
@@ -130,14 +145,18 @@ img.main{
 	width:40%;
 	height:20%;
 }
-#searchAlign{
-	float:left;
 
-}
 img.inner{
 	float:left;
 	margin-left:10px;
+	margin-top:5px;
 	margin-bottom:10px;
 	width:100px;
 	height:100px;
+}
+ h4.footer{
+	    margin-top: 120px;
+}
+h3{
+	    margin-top: 120px;
 }
